--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/DayBook.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/DayBook.xaml
@@ -73,28 +73,37 @@
                 <DataGridTemplateColumn Header="时间" Width="160" >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <DatePicker Language="zh-CN"  SelectedDateFormat="Long" SelectedDate="{Binding DayBooKDate, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" KeyDown="TextUserNo_OnKeyDown" ></DatePicker>
+                            <DatePicker Language="zh-CN"  SelectedDateFormat="Long" 
+                                    SelectedDate="{Binding DayBooKDate, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DatePicker>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="类型">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding DayBooKType, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <ComboBox 
+                            SelectedValue="{Binding DayBooKType, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                            SelectedValuePath="Key" 
+                            DisplayMemberPath="Value" 
+                            ItemsSource="{Binding Path=DataContext.DayBookTypes,
+                                RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" 
+                            IsReadOnly="True"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="金额">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding HowManey, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding HowManey, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                                     ></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="备注" Width="250">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Background="Azure" ></TextBox>
+                            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                                     ></TextBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
