--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/Produce.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/Produce.xaml
@@ -47,7 +47,7 @@
             <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
             <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
             <Button  Grid.Column="4" Grid.Row="0" Content="保存" Click="BtnSave_Click" ></Button>
-            <Button  Grid.Column="5" Grid.Row="0" Content="{x:Static props:Resources.Import}" Click="BtnImport_Click"></Button>
+            <!--<Button  Grid.Column="5" Grid.Row="0" Content="{x:Static props:Resources.Import}" Click="BtnImport_Click"></Button>-->
         </Grid>
         <GridSplitter HorizontalAlignment="Stretch" Grid.Row="2" Background="#FF1D1F1C" />
         <DataGrid Grid.Row="3" Name="gridProduces" AutoGenerateColumns="False" CanUserReorderColumns="True" CanUserResizeColumns="True" ItemsSource="{Binding Path=DataContext.Produces, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}}" IsReadOnly="True" FontWeight="Medium">
@@ -71,7 +71,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>-->
                 <DataGridTextColumn Header="产品系列" Binding="{Binding Category.Name}"/>
-                <DataGridTemplateColumn Header="条形码">
+                <DataGridTemplateColumn Header="条形码" Width="150">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBox Text="{Binding BarCode, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
