--- a/SmallHoneybee/SmallHoneybee.Wpf/Views/PurchaseOrder.xaml
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Views/PurchaseOrder.xaml
@@ -45,7 +45,7 @@
             <TextBox Grid.Column="1" Grid.Row="0" Name="TxtSearchBox"></TextBox>
             <Button  Grid.Column="2" Grid.Row="0" Content="{x:Static props:Resources.Search}" Click="BtnSearch_Click"/>
             <Button  Grid.Column="3" Grid.Row="0" Content="清空" Click="BtnClear_Click" />
-            <Button  Grid.Column="4" Grid.Row="0" Content="{x:Static props:Resources.Import}" Click="BtnImport_Click"></Button>
+            <!--<Button  Grid.Column="4" Grid.Row="0" Content="{x:Static props:Resources.Import}" Click="BtnImport_Click"></Button>-->
         </Grid>
         <GridSplitter HorizontalAlignment="Stretch" Grid.Row="2" Background="#FF1D1F1C" />
         <DataGrid Grid.Row="3" Name="GridPurchaseOrders" AutoGenerateColumns="False" 
